--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,10 +5,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-589.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇮🇹 意大利-1.12MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-481.8KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,10 +21,10 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-589.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -36,10 +36,10 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-589.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -52,10 +52,10 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-589.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -72,10 +72,10 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-589.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -87,10 +87,10 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-589.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -103,10 +103,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-589.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
@@ -128,10 +128,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-589.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
       - 🇺🇸 美国-481.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
