--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-329.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 未知国家-4.54MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
-  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-179.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇬🇧 英国-933.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 匈牙利-501.7KB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-454.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-458.5KB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-647.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-909.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-710.7KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-874.2KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-1019.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-358.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-541.7KB/s(Youtube:不良林), server: 88.80.189.108, port: 80, type: vmess, uuid: a8941bb8-19f8-43f7-ab52-1001d101a538, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 88.80.189.108}}
+  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 未知国家-4.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-933.0KB/s(Youtube:不良林)
-      - 匈牙利-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-541.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 未知国家-4.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-933.0KB/s(Youtube:不良林)
-      - 匈牙利-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-541.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 未知国家-4.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-933.0KB/s(Youtube:不良林)
-      - 匈牙利-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-541.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 未知国家-4.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-933.0KB/s(Youtube:不良林)
-      - 匈牙利-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-541.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 未知国家-4.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-933.0KB/s(Youtube:不良林)
-      - 匈牙利-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-541.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 未知国家-4.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-933.0KB/s(Youtube:不良林)
-      - 匈牙利-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-541.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-329.9KB/s(Youtube:不良林)
-      - 未知国家-4.54MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-179.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-933.0KB/s(Youtube:不良林)
-      - 匈牙利-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-454.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-909.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-874.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1019.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-358.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-541.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
